kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masters-pool
  namespace: my-cluster
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: masters-pool
  template:
    metadata:
      labels:
        app: masters-pool
    spec:
      containers:
        - name: masters-pool
          image: ghcr.io/dgunzy/masters-pool:latest 
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000 
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "128Mi"
              cpu: "250m"
